<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lex</string>
    <string name="menu_settings">Settings</string>
    <string name="start_exp">Start Session</string>
    <string name="main_activity_display_message">Trial Window</string>
    <string name="next">Next Round</string>
    <string name="quit">Quit</string>
    <string name="guid">GUID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email@domain.com</string>

</resources>